--- a/package.json
+++ b/package.json
@@ -11,19 +11,19 @@
   },
   "dependencies": {
     "@prisma/client": "^6.19.0",
+    "bcryptjs": "^3.0.3",
+    "date-fns": "^4.1.0",
+    "lucide-react": "^0.553.0",
     "next": "16.0.1",
+    "next-auth": "^4.24.13",
+    "nodemailer": "^7.0.10",
+    "radix-ui": "^1.4.3",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "radix-ui": "^1.4.3",
-    "next-auth": "^4.24.13",
-    "bcryptjs": "^3.0.3",
-    "nodemailer": "^7.0.10",
+    "react-hot-toast": "^2.6.0",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
-    "date-fns": "^4.1.0",
-    "react-hot-toast": "^2.6.0",
-    "zod": "^4.1.12",
-    "lucide-react": "^0.553.0"
+    "zod": "^4.1.12"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -33,6 +33,7 @@
     "@testing-library/user-event": "^14.6.1",
     "@types/jest": "^30.0.0",
     "@types/node": "^24",
+    "@types/nodemailer": "^7.0.3",
     "@types/react": "19.2.2",
     "@types/react-dom": "^19.2.2",
     "beasties": "0.3.5",
