Rename project from Quicket to Informejo and update description in package.json. Adjust README title to reflect new project name.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "quicket",
+  "name": "informejo",
+  "description": "Informejo is a platform for creating and managing IT support tickets",
   "version": "1.0.3",
   "private": true,
   "scripts": {
