Implement WebSocket functionality with Socket.IO for real-time updates. Introduce a custom Node.js server, update ecosystem configuration to run in fork mode on port 3003, and modify API routes to emit events. Enhance Nginx configuration for WebSocket support and add comprehensive documentation for setup and deployment.

--- a/example.env
+++ b/example.env
@@ -2,7 +2,7 @@
 DATABASE_URL="postgresql://informejo:Password@localhost:5432/informejo?schema=public"
 
 # NextAuth - Generate a secure secret for production!
-NEXTAUTH_URL="http://localhost:3000"
+NEXTAUTH_URL="http://localhost:3003"
 NEXTAUTH_SECRET="openssl rand -base64 32"
 
 # Keycloak OIDC - Update with your Keycloak details
@@ -18,7 +18,12 @@ SMTP_PASSWORD="your-password"
 SMTP_FROM="IT Support <support@example.com>"
 
 # App Configuration
-PORT=3000
-NEXT_PUBLIC_APP_URL="http://localhost:3000"
+PORT=3003
+NEXT_PUBLIC_APP_URL="http://localhost:3003"
+
+# WebSocket/Socket.IO (optional - defaults to NEXT_PUBLIC_APP_URL)
+NEXT_PUBLIC_SOCKET_URL="http://localhost:3003"
+
+# File Uploads
 UPLOAD_DIR="./uploads"
 MAX_FILE_SIZE="10485760"
