--- a/documents/nginx.conf
+++ b/documents/nginx.conf
@@ -34,11 +34,38 @@ server {
     proxy_send_timeout 60s;
     proxy_read_timeout 60s;
     
+    # Socket.IO WebSocket endpoint (optimized for real-time)
+    location /socket.io/ {
+        proxy_pass http://informejo_backend;
+        
+        # WebSocket specific configuration
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
+        
+        # Preserve client information
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        
+        # WebSocket timeouts (longer for persistent connections)
+        proxy_read_timeout 86400s;
+        proxy_send_timeout 86400s;
+        
+        # Disable buffering for real-time data
+        proxy_buffering off;
+        proxy_cache off;
+        
+        # Pass through HAProxy headers
+        proxy_set_header X-Forwarded-Ssl $https;
+    }
+    
     location / {
         # Proxy to PM2 app on port 3003
         proxy_pass http://informejo_backend;
         
-        # WebSocket support (for Socket.IO)
+        # WebSocket support (for Socket.IO fallback)
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
