--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "version": "1.0.4",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "node server.js",
     "build": "next build",
-    "start": "next start",
+    "start": "NODE_ENV=production node server.js",
     "lint": "next lint",
     "postinstall": "npx prisma generate"
   },
