Update package.json and package-lock.json to version 1.1.4, bump zod to 4.3.5, nodemailer types to 7.0.5, react types to 19.2.8, and baseline-browser-mapping to 2.9.14 for improved compatibility and features.

--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@types/pg": "^8.16.0",
     "@types/react": "19.2.8",
     "@types/react-dom": "^19.2.3",
+    "baseline-browser-mapping": "^2.9.14",
     "beasties": "0.3.5",
     "eslint": "9.39.2",
     "eslint-config-next": "16.1.1",
